samples/_failures_safe/1761541451_027f6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3ed8235.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_d3ed8235.c:159:9: error: expected declaration or statement at end of input
  159 |         tokenizer->position++;
      |         ^~~~~~~~~
./samples/SAFE/__tmp_d3ed8235.c:159:9: error: expected declaration or statement at end of input
